Backend/Kubernetes/authPod.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  template:
    metadata:
      labels:
        app: authservice
    spec:
      # This section describes the containers that make up the deployment
      containers:
        - name: authservice
          image: gcr.io/stone-timing-278916/authservice
          ports:
            - containerPort: 8080
          # Set env variables used for Postgres Connection
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=stone-timing-278916:us-central1-f:memegen-db=tcp:5432",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: my-secrets-volume
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: my-secrets-volume
          secret:
            secretName: cloudsql-instance-credentials
