Backend/Kubernetes/qaPod.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: qaservice
  labels:
    app: qaservice
spec:
  template:
    metadata:
      labels:
        app: qaservice
    spec:
      # This section describes the containers that make up the deployment
      containers:
        - name: qaservice
          image: gcr.io/stone-timing-278916/qaservice
          ports:
            - containerPort: 8080
          # Set env variables used for Postgres Connection
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=stone-timing-278916:us-central1-f:qaservice-db=tcp:5432",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: my-secrets-volume
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: my-secrets-volume
          secret:
            secretName: cloudsql-instance-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: qaservice
  namespace: default
  labels:
    app: qaservice
spec:
  selector:
    app: qaservice
  ports:
  - name: http
    port: 8080
    protocol: TCP
  type: #SVC_TYPE#
