Backend/Kubernetes/platform-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: platform-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: platforminfo
spec:
  hosts:
  - "*"
  gateways:
  - platform-gateway
  http:
  - match:
    - uri:
        prefix: /userservice
    route:
    - destination:
        host: authservice
        port:
          number: 8080
  - match:
    - uri:
        prefix: /qaservice
    route:
    - destination:
        host: qaservice
        port:
          number: 8080
